@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-15T16:09:39Z",
+  "timestamp" : "2023-07-16T08:10:17Z",
   "count_outdated" : 4784,
   "uniques_outdated" : 1381,
-  "count" : 4856,
-  "uniques" : 1427,
+  "count" : 4857,
+  "uniques" : 1428,
   "clones" : [
     {
       "timestamp": "2023-07-03T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
