@@ -1,5 +1,5 @@
 {
-  "count": 72,
+  "count": 73,
   "uniques": 38,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2023-07-15T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
