@@ -1,3 +1,12 @@
+2023-07-16T08:10:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5566620611 # 1728
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
+* notice: last 14d: unq all: 38 73
+* notice: prev accum: outdated-unq outdated-all / unq all: 1381 4784 / 1427 4856
+* notice: next accum: outdated-unq outdated-all / unq all: 1381 4784 / 1428 4857
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-16]
+
 2023-07-15T16:09:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5563083634 # 1726
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
